--- a/src/components/add-posts/add-posts.component.css
+++ b/src/components/add-posts/add-posts.component.css
@@ -1,7 +1,10 @@
 .add-post {
     background-color: white;
-    margin-top: 80px;
+    margin-left: -10%;
+    height: 100%;
+    width: 550px;
 }
+
 .btn-animate:hover {
     background-color: rgb(34, 54, 228);
 }
