--- a/src/components/friend-request/friend-request.component.css
+++ b/src/components/friend-request/friend-request.component.css
@@ -1,15 +1,20 @@
-.friends{
-    background-color: white;
-  }
-  .dp img{ 
-    width:40px;
-    height: 40px;
-    border-radius: 50%;
-  }
-  
-  .friend {
-    display: flex;
-    align-items: center;
-    text-decoration: none;
-    color: #333;
+.friends {
+  background-color: white;
+  margin-left: -10%;
+  height: 100%;
+  width: 550px;
+  border-radius: 8px;
+}
+
+.dp img {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+}
+
+.friend {
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  color: #333;
 }
