--- a/src/components/right-panel/right-panel.component.css
+++ b/src/components/right-panel/right-panel.component.css
@@ -1,20 +1,21 @@
-
-.right-panel{
+.right-panel {
     position: fixed;
-    right: 0;
     top: 70px;
-    width: 100%;
-    max-width: 25%;
-    height: auto;
-    margin: 0 auto;
-    padding: 0 20px;
+    right: 0;
+    width: 27.3%;
+    height: calc(80vh - 50px);
+    overflow-y: auto;
     background-color: white;
+    padding: 15px;
+    z-index: 100;
 }
+
 
 .right-panel p {
     font-weight: bold;
 }
-.right-panel div:hover{
+
+.right-panel div:hover {
     background-color: rgb(247, 244, 244);
 }
 
@@ -47,7 +48,7 @@
 .friend i.bi-send-fill {
     font-size: 20px;
     color: rgb(23, 114, 250);
-    margin-left: auto; 
+    margin-left: auto;
 }
 
 /* animation */
@@ -100,4 +101,4 @@
     .friend i.bi-send-fill {
         font-size: 16px;
     }
-}  
+}
