--- a/src/components/sign-in-page/sign-in-page.component.html
+++ b/src/components/sign-in-page/sign-in-page.component.html
@@ -13,6 +13,9 @@
                 </div>
                 
                 <button type="submit" style="width: 70%;" class="btn btn-primary rounded-pill mb-3">Sign in</button>
+                <!-- Add Forgot Password link here-->
+                <br>
+                <a routerLink="/forgetpassword" class="mb-3">Forgot Password?</a> 
                 <p>Or</p>
                 <button style="width: 70%;" type="button" class="btn btn-light rounded-pill border border-dark mb-3">
                     New to MediaClub? <a routerLink="/signup">Sign Up</a>
