--- a/src/components/user-profile/user-profile.component.css
+++ b/src/components/user-profile/user-profile.component.css
@@ -1,13 +1,15 @@
-
-.middle-panel{
-    /* flex:1; */
-    max-width: 50%;
-    width: 49%;
+.middle-panel {
+    flex-grow: 1;
+    margin-left: 22%;
+    margin-right: 50%;
+    height: 100%;
+    overflow-y: auto;
     display:flex;
     flex-direction: column;
     align-items:center;
     background-color: white;
-    margin-top: 80px;
+    max-width: 50%;
+    width: 49%;
 }
 
 .card{
@@ -100,11 +102,11 @@
 
 .post .post-top .post-info .name{
     cursor:pointer;
-    font-size:17px;
+    font-size:16px;
 }
 
 .post .post-top .post-info .time{
-    font-size:13px;
+    font-size:12px;
     cursor:pointer;
 }
 
