--- a/src/components/header/header.component.html
+++ b/src/components/header/header.component.html
@@ -1,7 +1,7 @@
 <nav class="rounded">
   <div class="nav-left">
     <img
-      src="../../assets/images/MediaBoxLogo_CMYK-01.png"
+      src="../../assets/images/logo.png"
       class="logo"
       alt="Logo"
     />
@@ -11,7 +11,12 @@
     <a href="/dashboard">
       <em class="bi bi-house-door-fill" style="color: rgb(23, 114, 250)"></em>
     </a>
-
+    <!-- <a href="/dashboard/add-story">
+      <em
+        class="fas fa-camera heart-animate"
+        style="color: rgb(32, 75, 124)"
+      ></em>
+    </a> -->
     <a href="/dashboard/add-posts">
       <em
         class="bi bi-file-plus-fill heart-animate"
