--- a/src/components/left-panel/left-panel.component.css
+++ b/src/components/left-panel/left-panel.component.css
@@ -45,7 +45,7 @@
   top: 80px;
   left: 10px;
   width: 20%;
-  height: 55vh;
+  /* height: 55vh; */
   overflow-y: auto;
   background-color: white;
   padding: 15px;
