--- a/src/components/userschat/userschat.component.css
+++ b/src/components/userschat/userschat.component.css
@@ -1,13 +1,12 @@
 .chats {
     position: sticky;
+    margin-top: 90px;
     top: 70px;
-    width: 49%;
-    max-width: 50%;
+    width: 550px;
     height: 100%;
-    margin: 0 auto;
     padding: 0 20px;
-    margin-top: 80px;
     background-color: white;
+    margin-left: -10%;
 }
 
 .chat-box {
