--- a/src/components/add-posts/add-posts.component.html
+++ b/src/components/add-posts/add-posts.component.html
@@ -7,6 +7,7 @@
         name="file"
         type="file"
         (change)="onImageFileChange($event)"
+        multiple
       />
     </div>
     <div class="m-3">
