--- a/src/components/comment/comment.component.html
+++ b/src/components/comment/comment.component.html
@@ -3,7 +3,7 @@
     <div *ngIf="post.text" class="post-content">
       {{ post.text }}
     </div>
-    <div *ngIf="post.media" class="post-content">
+    <!-- <div *ngIf="post.media" class="post-content">
       <ng-container [ngSwitch]="getMediaType(post.media)">
         <img *ngSwitchCase="'image'" [src]="post.media" alt="Image" />
         <video *ngSwitchCase="'video'" controls>
@@ -14,31 +14,26 @@
         </audio>
         <div *ngSwitchDefault>Unsupported media type</div>
       </ng-container>
-    </div>
+    </div> -->
   </div>
   <div class="post border">
     <form (ngSubmit)="onSubmit()">
       <div class="form-group">
         <label for="comment">Comments</label>
-        <textarea
-          class="form-control"
-          id="comment"
-          rows="5"
-          placeholder="Enter your comment"
-          [(ngModel)]="ComentText"
-          name="ComentText"
-        ></textarea>
+        <textarea class="form-control" id="comment" rows="5" placeholder="Enter your comment" [(ngModel)]="ComentText"
+          name="ComentText"></textarea>
       </div>
       <input type="submit" class="btn btn-primary" value="Comment" />
     </form>
   </div>
   <div class="post border">
     <div *ngFor="let commented of comments">
-      <p class="name">
-        <strong>{{ userMap[commented.id] || "Loading..." }} : </strong
-        ><span>{{ commented.content }}</span>
-        <div (click)="reply(commented.id)"><b> Reply</b></div>
-      
+      <p class="name" class="comment-container">
+        <strong>{{ userMap[commented.id] || "Loading..." }} : </strong><span>{{ commented.content }}</span>
+        <button (click)="deleteComment(commented.id)" class="btn btn-danger delete-button">
+          <i class="bi bi-trash"></i>
+        </button>
+      </p>
     </div>
   </div>
 </div>
