--- a/src/components/edit-profile/edit-profile.component.css
+++ b/src/components/edit-profile/edit-profile.component.css
@@ -1,5 +1,6 @@
 .edit-profile {
   background-color: white;
+  margin-top: 80px;
   margin-left: -10%;
   height: 100%;
   width: 550px;
@@ -13,7 +14,6 @@
   font-size: 16px;
   font-weight: bold;
 }
-
 .rounded-circle {
   width: 150px;
   height: 150px;
