--- a/src/components/left-panel/left-panel.component.html
+++ b/src/components/left-panel/left-panel.component.html
@@ -48,7 +48,7 @@
 
     <li class="mb-2 rounded-3 border" (click)="chats(profile.id)">
       <em class="fa fa-user-friends mx-3"></em>
-      <div>Chats</div>
+      <div>Messages</div>
     </li>
   </ul>
 </div>
