--- a/src/components/report-posts/report-posts.component.css
+++ b/src/components/report-posts/report-posts.component.css
@@ -1,10 +1,22 @@
 
 .post{
-    width:100%;
-    background:#fff;
-    border-radius:10px;
-    padding:10px;
-    margin:10px;
+    position: sticky;
+    margin-top: 90px;
+    top: 70px;
+    width: 600px;
+    height: 100%;
+    padding: 0 20px;
+    background-color: white;
+    margin-left: -20%;
+}
+.posts{
+    position: sticky;
+    top: 70px;
+    width: 600px;
+    height: 100%;
+    padding: 0 20px;
+    background-color: white;
+    margin-left: -20%;
 }
 .btn{
     align-items: center;
