--- a/src/components/user-profile/user-profile.component.css
+++ b/src/components/user-profile/user-profile.component.css
@@ -1,54 +1,16 @@
 .middle-panel {
     flex-grow: 1;
-    margin-left: 22%;
+    margin-top: 80px;
+    margin-left: -5%;
     margin-right: 50%;
     height: 100%;
     overflow-y: auto;
     display:flex;
     flex-direction: column;
     align-items:center;
+    max-width: 600px;
+    width: 600px;
     background-color: white;
-    max-width: 50%;
-    width: 49%;
-}
-
-.card{
-    border:none;
-    position:relative;
-    overflow:hidden;
-    border-radius:8px;
-    cursor:pointer;
-    /* background-color: white; */
-}
-
-.card:before{
-    content:"";
-    position:absolute;
-    left:0;
-    top:0;
-    width:4px;
-    height:100%;
-    background-color:#E1BEE7;
-    transform:scaleY(1);
-    transition:all 0.5s;
-    transform-origin: bottom
-}
-
-.card:after{
-    content:"";
-    position:absolute;
-    left:0;
-    top:0;
-    width:4px;
-    height:100%;
-    background-color:#8E24AA;
-    transform:scaleY(0);
-    transition:all 0.5s;
-    transform-origin: bottom
-}
-
-.card:hover::after{
-    transform:scaleY(1);
 }
 
 .fonts{
@@ -62,18 +24,17 @@
 
 .no-post{
     padding: 20px;
-    width: 100%;
+    margin-left: 5%;
+    width: 90%;
     text-align: center;
     height: 150px;
     background-color: white;
 }
 
 .post{
-    width:100%;
-    /* background:#fff; */
+    width:90%;
+    margin-left: 5%;
     border-radius:10px;
-    /* padding:10px;
-    margin:10px; */
     background-color: white;
 }
 
@@ -189,6 +150,186 @@
     }
 
     .post .post-content {
-        font-size: 14px; /* Adjust font size for smaller screens */
+        font-size: 14px; 
     }
 }
+
+
+/* 
+.middle-panel{
+    max-width: 50%;
+    width: 49%;
+    display:flex;
+    flex-direction: column;
+    align-items:center;
+    background-color: white;
+    margin-top: 80px;
+}
+
+.card{
+    border:none;
+    position:relative;
+    overflow:hidden;
+    border-radius:8px;
+    cursor:pointer;
+}
+
+.card:before{
+    content:"";
+    position:absolute;
+    left:0;
+    top:0;
+    width:4px;
+    height:100%;
+    background-color:#E1BEE7;
+    transform:scaleY(1);
+    transition:all 0.5s;
+    transform-origin: bottom
+}
+
+.card:after{
+    content:"";
+    position:absolute;
+    left:0;
+    top:0;
+    width:4px;
+    height:100%;
+    background-color:#8E24AA;
+    transform:scaleY(0);
+    transition:all 0.5s;
+    transform-origin: bottom
+}
+
+.card:hover::after{
+    transform:scaleY(1);
+}
+
+.fonts{
+    font-size:16px;
+    font-weight: bold;
+}
+.rounded-circle{
+    width: 150px;
+    height: 150px;
+  }
+
+.no-post{
+    padding: 20px;
+    width: 100%;
+    text-align: center;
+    height: 150px;
+    background-color: white;
+}
+
+.post{
+    width:100%;
+    border-radius:10px;
+    background-color: white;
+}
+
+.post .post-top{
+    display:flex;
+    align-items: center;
+    padding:10px;
+}
+
+.post .post-top .dp{
+    width:40px;
+    height:40px;
+    border-radius: 50%;
+    overflow:hidden;
+}
+
+.post .post-top .dp > img{
+    width:100%;
+    cursor:pointer;
+}
+
+.post .post-top .post-info{
+    font-weight: bold;
+}
+
+.post .post-top .post-info .name{
+    cursor:pointer;
+    font-size:17px;
+}
+
+.post .post-top .post-info .time{
+    font-size:13px;
+    cursor:pointer;
+}
+
+.post .post-top i{
+    margin-left:auto;
+    cursor: pointer;
+}
+
+.post .post-top > input{
+    height:40px;
+    padding:5px 10px;
+    border-radius:25px;
+    outline:none;
+    border:none;
+    flex:1;
+    background:#eee;
+    margin-left:10px;
+}
+
+.post .post-content {
+    font-size: 16px;
+    font-weight: normal;
+    padding: 10px;
+}
+
+.post-content>img, .post-content>video, .post-content>audio {
+    width: 100%;
+    height: 400px;
+    margin: 5px 0px;
+}
+
+.post .post-bottom{
+    box-shadow: 1px solid #ddd;
+    display:flex;
+    justify-content: space-between;
+    padding:5px 5px 0px 5px;
+}
+
+.post .post-bottom .action{
+    padding:10px;
+    border-radius:10px;
+    transition: .3s ease-in;
+    cursor: pointer;
+}
+
+.post .post-bottom .action:hover{
+    background:#eee;
+}
+
+.post.create .post-bottom > .action{
+    color:#d74;
+} 
+
+@media (max-width: 576px) {
+    .middle-panel .story-section .story {
+        width: 150px; 
+        height: 150px; 
+    }
+}
+
+@media (max-width: 768px) {
+    .post .post-top .post-info .name,
+    .post .post-top .post-info .time {
+        font-size: 14px; 
+    }
+}
+
+@media (max-width: 576px) {
+    .post .post-top .post-info .name,
+    .post .post-top .post-info .time {
+        font-size: 12px; 
+    }
+
+    .post .post-content {
+        font-size: 14px; 
+    }
+} */
